--- a/themes/digides/layouts/partials/footer.html
+++ b/themes/digides/layouts/partials/footer.html
@@ -3,20 +3,15 @@
 		<div class="row row-pb-md">
 			<div class="col-md-6 colorlib-widget">
 				<h1 style="color: white;">Dapatkan Penawaran Menarik!</h1>
-				<p>Khusus untuk pemerintah desa berkesempatan mendapat penawaran menarik untuk setiap pendaftaran
-					website administrasi desa dan pelayanan desa.</p>
+				<p>Khusus untuk pemerintah desa berkesempatan mendapat penawaran menarik untuk setiap pendaftaran website administrasi desa dan pelayanan desa.</p>
 				<p>
 
-					<p><a href="https://api.whatsapp.com/send?phone=628176420596&text=Halo%20saya%20mau%20tanya%20tentang%20digides..."
-							class="btn btn-primary btn-outline with-arrow" style="border: 1px solid #f5f5f5;">Chat
-							Kami<i class="icon-arrow-right3"
-								onclick="__gaTracker('send', 'event', 'buttons', 'click', 'chatkami');"></i></a></p>
+					<p><a href="https://api.whatsapp.com/send?phone=628176420596&text=Halo%20saya%20mau%20tanya%20tentang%20digides..." class="btn btn-primary btn-outline with-arrow" style="border: 1px solid #f5f5f5;">Chat Kami<i class="icon-arrow-right3" onclick="__gaTracker('send', 'event', 'buttons', 'click', 'chatkami');"></i></a></p>
 				</p>
 
 				<p>
 					<ul class="colorlib-social-icons">
-						<li><a href="#"><i class="fab fa-facebook-f" style="font-size: 30px; color: white;"></i></a>
-						</li>
+						<li><a href="#"><i class="fab fa-facebook-f" style="font-size: 30px; color: white;"></i></a></li>
 						<li><a href="#"><i class="fab fa-instagram" style="font-size: 30px; color: white;"></i></a></li>
 						<li><a href="#"><i class="fab fa-whatsapp" style="font-size: 30px; color: white;"></i></a></li>
 					</ul>
@@ -27,40 +22,35 @@
 			<div class="col-md-6 colorlib-widget">
 				<h4>Lihat Demo untuk pelajari lebih lanjut tentang Digides!</h4>
 				<p>
-					<p><button class="btn btn-primary btn-outline with-arrow" style="border: 1px solid #f5f5f5;"
-							onclick="lihatdemo()">Lihat Demo<i class="icon-arrow-right3"></i></button></p>
+					<p><button class="btn btn-primary btn-outline with-arrow" style="border: 1px solid #f5f5f5;" onclick="lihatdemo()">Lihat Demo<i class="icon-arrow-right3"></i></button></p>
 					<h4>Anda Developer/ Relawan TIK/ Pendamping Desa/ sedang memperjuangkan desa?</h4>
 					<p>
-						<p><a href="https://api.whatsapp.com/send?phone=628176420596&text=Halo%20saya%20mau%20kolaborasi..."
-								class=" btn btn-primary btn-outline with-arrow" style="border: 1px solid #f5f5f5;">Ayo
-								Kolaborasi<i class="icon-arrow-right3"></i></a></p>
+						<p><a href="https://api.whatsapp.com/send?phone=628176420596&text=Halo%20saya%20mau%20kolaborasi..." class=" btn btn-primary btn-outline with-arrow" style="border: 1px solid #f5f5f5;">Ayo Kolaborasi<i class="icon-arrow-right3"></i></a></p>
+					</div>
+				</div>
 			</div>
-		</div>
-	</div>
-	<div class="copy" style="padding: 0;">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 text-center" style="padding: 1em;">
-					<p>
+			<div class="copy" style="padding: 0;"> 
+				<div class="container" >
+					<div class="row" >
+						<div class="col-md-12 text-center" style="padding: 1em;">
+							<p>
 
-						<footer>
-							<div class="copy" style="padding: 0px">
-								<div class="container">
-									<div class="row">
-										<div class="col-md-12 text-center">
-											<p>
-												<script style="padding: 1;">
-													document.write(new Date().getFullYear());
-												</script> &copy; Powered by
-												<a href="https://upanastudio.com" target="_blank">Upana Studio</a>
-											</p>
+								<footer>
+									<div class="copy" style="padding: 0px">
+										<div class="container">
+											<div class="row">
+												<div class="col-md-12 text-center">
+													<p>
+														<script style="padding: 1;">document.write(new Date().getFullYear());</script> &copy; Powered by 
+														<a href="https://upanastudio.com" target="_blank">Upana Studio</a> 
+													</p>
+												</div>
+											</div>
 										</div>
 									</div>
-								</div>
+								</footer>
 							</div>
-						</footer>
-				</div>
 
-				<div class="gototop js-top">
-					<a href="#halaman" id="halaman" class="js-gotop "><i class="icon-arrow-up2"></i></a>
-				</div>
+							<div class="gototop js-top">
+								<a href="#halaman" id="halaman" class="js-gotop "><i class="icon-arrow-up2"></i></a>
+							</div>
