--- a/themes/digides/layouts/partials/post-list.html
+++ b/themes/digides/layouts/partials/post-list.html
@@ -69,8 +69,8 @@
 
 								{{ .Content }}
 
-								<!-- untuk tombol share -->
-								{{ partial "share-button.html" . }}
+								<!-- untuk komentar -->
+								{{ partial "disqus.html" . }}
 
 							</div>
 						</div>
