--- a/themes/digides/layouts/partials/post-list-all.html
+++ b/themes/digides/layouts/partials/post-list-all.html
@@ -68,6 +68,10 @@
                                         {{ end }}
 
                                         {{ .Content}}
+
+                                        <!-- untuk tombol share -->
+                                        {{ partial "share-button.html" . }}
+                                        
                                     </div>
                                 </div>
                                 <a class="cd-modal-close">Close</a>
