--- a/themes/digides/layouts/_default/list.html
+++ b/themes/digides/layouts/_default/list.html
@@ -8,34 +8,17 @@
 
 	<div class="colorlib-loader"></div>
 	<div id="page">
-
-		<nav class="colorlib-nav" role="navigation">
-			<div class="top-menu">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-2">
-							<div id="colorlib-logo"><a href="#"><img src="../images/Asset5.png" id="logo" data-height-percentage-70 data-actual-width427 data-actual-height-144 style="width: 180px; height: 69px;"></a></div>
-						</div>
-						<div class="col-md-10 text-right menu-1">
-							<ul class="nav navbar-nav navbar-right">
-								<li><a href="../" class="js-colorlib-nav-toggle">Home</a></li>
-							</ul>  
-						</div>
-					</div>
-				</div>
-			</div>
-		</nav>
-
-		<section id="home" class="video-hero" style="height: 150px; background-image: url(../images/walpaper.jpg); background-size:cover; background-position: center; background-attachment:fixed;" data-section="home">
-		</section>
+		<!-- untuk menu nav -->
+		{{ partial "nav-post-all.html" . }}
+		<!-- untuk menu nav -->
 
 		<!-- ini untuk tampilan semua artikel yang akan ditambah -->
 		{{ partial "post-list-all.html" . }}
 		<!-- ini untuk tampilan semua artikel yang akan ditambah -->
 
-		<!-- untuk menampilkan tampilan file foot dalam folder partials -->
+		<!-- untuk footer -->
 		{{ partial "footer.html" . }}
-
+		<!-- untuk footer -->
 	</div>
 
 	<!-- untuk memanggil file foot dalam folder partials -->
