--- a/layouts/partials/nav-post-all.html
+++ b/layouts/partials/nav-post-all.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="col-md-10 text-right menu-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="{{ .Site.BaseURL }}" class="js-colorlib-nav-toggle">Home</a></li>
+                        <li><a href="{{ .Site.BaseURL }}" class="js-colorlib-nav-toggle" style="font-size: 15px; font-weight: bolder">Home</a></li>
                     </ul>  
                 </div>
             </div>
